force-app/main/default/objects/IFI_Location__c/IFI_Location__c.object-meta.xml
<CustomObject>
    <description></description>
    <label>IFI Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFI Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>