force-app/main/default/objects/IFI_Location__c/fields/IFI_Active__c.field-meta.xml
<CustomField>
    <fullName>IFI_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>