force-app/main/default/objects/IFI_Location__c/fields/IFI_IntacctEntityID__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctEntityID__c</fullName>
    <label>Intacct Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>