force-app/main/default/objects/IFI_Location__c/fields/IFI_IsEntity__c.field-meta.xml
<CustomField>
    <fullName>IFI_IsEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Entity</label>
    <type>Checkbox</type>
</CustomField>