force-app/main/default/objects/IFI_Location__c/fields/IFI_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>IFI_Location_ID__c</fullName>
    <externalId>true</externalId>
    <label>Location ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>